--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,15 @@
-:root{
-    --primary-color:#1d3557;
+:root {
+    --primary-color: #1d3557;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-header{
+
+header,
+footer {
     background-color: var(--primary-color);
 }
